Update homepage heading to "New Release"

--- a/Biblio_Frontend/homepage.htm
+++ b/Biblio_Frontend/homepage.htm
@@ -31,7 +31,7 @@
             <section class="hero">
                 <div class="hero-overlay">
                     <div class="hero-text">
-                        <h1>Ipsum Dolor Si</h1>
+                        <h1>New Rekease</h1>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu feugiat amet, libero ipsum enim pharetra hac. Urna commodo, lacus ut magna velit eleifend. Amet, quis urna, a eu.</p>
                         <a href="#" class="read-more">Read More →</a>
                     </div>
