--- a/Biblio_Frontend/homepage.htm
+++ b/Biblio_Frontend/homepage.htm
@@ -1,4 +1,10 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="v iewport" content="width=device-width, initial-scale=1.0">
+    <title>Home|Biblio</title>
+</head>
 <body>
         <header>
             <div class="logo">
