Update homepage with DOCTYPE declaration and title

--- a/Biblio_Frontend/homepage.htm
+++ b/Biblio_Frontend/homepage.htm
@@ -1,4 +1,25 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="v iewport" content="width=device-width, initial-scale=1.0">
+    <title>Home|Biblio</title>
+</head>
+<body>
+        <header>
+            <div class="logo">
+              <h2>Biblio</h2>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#" class="active">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Books</a></li>
+                    <li><a href="#">New Release</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Blog</a></li>
+                </ul>
+            </nav>
             <div class="search-account">
                 <input type="text" placeholder="Search Books">
                 <a href="#">Account</a>
