--- a/Biblio_Frontend/homepage.htm
+++ b/Biblio_Frontend/homepage.htm
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="v iewport" content="width=device-width, initial-scale=1.0">
     <title>Home|Biblio</title>
+    <link href = "css/homepage.css">
 </head>
 <body>
     <header>
@@ -56,7 +57,7 @@
             </div>
         </section>
     </main>
-
+<script href="js/homepage.js"></script>
 
 </body>
 </html>
