--- a/Biblio_Frontend/homepage.htm
+++ b/Biblio_Frontend/homepage.htm
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/homepage.css">
+    <script src="./js/homepage.js"></script>
     <title>Home|Biblio</title>
-    <link href = "css/homepage.css">
-    
-<script href="js/homepage.js"></script>
 </head>
 <body>
     <header>
