Update homepage with top categories section

--- a/Biblio_Frontend/homepage.htm
+++ b/Biblio_Frontend/homepage.htm
@@ -56,6 +56,31 @@
                 </div>
             </div>
         </section>
+        <section class="categories">
+            <h2>Explore our Top Categories</h2>
+            <div class="categories-navigation">
+                <button class="prev">←</button>
+                <button class="next">→</button>
+            </div>
+            <div class="categories-content">
+                <div class="category-card">
+                    <img src="category1.jpg" alt="Higher Education">
+                    <h3>Higher Education</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu feugiat amet, libero ipsum enim pharetra hac. Urna commodo, lacus ut mat.</p>
+                </div>
+                <div class="category-card">
+                    <img src="category2.jpg" alt="Management Books">
+                    <h3>Management Books</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu feugiat amet, libero ipsum enim pharetra hac. Urna commodo, lacus ut mat.</p>
+                </div>
+                <div class="category-card">
+                    <img src="category3.jpg" alt="Engineering Books">
+                    <h3>Engineering Books</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu feugiat amet, libero ipsum enim pharetra hac. Urna commodo, lacus ut mat.</p>
+                </div>
+            </div>
+            <a href="#" class="view-more">View More →</a>
+        </section>
     </main>
     <script src="./js/homepage.js"></script>
 </body>
