Update homepage with hero section and new release books

--- a/Biblio_Frontend/homepage.htm
+++ b/Biblio_Frontend/homepage.htm
@@ -81,6 +81,36 @@
             </div>
             <a href="#" class="view-more">View More →</a>
         </section>
+        <section class="hero">
+            <div class="hero-text">
+                <h1>Access, Read, Practice & Engage with Digital Content (eBook)</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu feugiat amet, libero ipsum enim pharetra hac. Urna commodo, lacus ut magna velit eleifend. Amet, quis urna, a eu.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <div class="email-input">
+                    <input type="email" placeholder="Enter Your Email Address">
+                    <button>Login</button>
+                </div>
+            </div>
+            <div class="hero-image">
+                <img src="your-image.jpg" alt="Hero Image">
+            </div>
+        </section>
+        <section class="new-release">
+            <h2>New Release Books</h2>
+            <div class="book-cards">
+                <div class="book-card">
+                    <img src="book1.jpg" alt="Book 1">
+                    <p>Simple Way Of Peace Life</p>
+                </div>
+                <div class="book-card">
+                    <img src="book2.jpg" alt="Book 2">
+                    <p>Great Travel</p>
+                </div>
+                <div class="book-card">
+                    <img src="book3.jpg" alt="Book 3">
+                    <p>Once Upon a Time</p>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="./js/homepage.js"></script>
 </body>
