Update homepage with optimized image loading

--- a/Biblio_Frontend/homepage.htm
+++ b/Biblio_Frontend/homepage.htm
@@ -91,22 +91,22 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="your-image.jpg" alt="Hero Image">
+                <img src="https://images.unsplash.com/photo-1522407183863-c0bf2256188c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fGJvb2tzfGVufDB8fDB8fHww" alt="Hero Image">
             </div>
         </section>
         <section class="new-release">
             <h2>New Release Books</h2>
             <div class="book-cards">
                 <div class="book-card">
-                    <img src="book1.jpg" alt="Book 1">
+                    <img src="https://images.unsplash.com/photo-1507738978512-35798112892c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fGJvb2tzfGVufDB8fDB8fHww" alt="Book 1">
                     <p>Simple Way Of Peace Life</p>
                 </div>
                 <div class="book-card">
-                    <img src="book2.jpg" alt="Book 2">
+                    <img src="https://images.unsplash.com/photo-1507738978512-35798112892c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fGJvb2tzfGVufDB8fDB8fHww" alt="Book 2">
                     <p>Great Travel</p>
                 </div>
                 <div class="book-card">
-                    <img src="book3.jpg" alt="Book 3">
+                    <img src="https://images.unsplash.com/photo-1507738978512-35798112892c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fGJvb2tzfGVufDB8fDB8fHww" alt="Book 3">
                     <p>Once Upon a Time</p>
                 </div>
             </div>
