--- a/Biblio_Frontend/homepage.htm
+++ b/Biblio_Frontend/homepage.htm
@@ -109,6 +109,14 @@
                     <img src="https://images.unsplash.com/photo-1507738978512-35798112892c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fGJvb2tzfGVufDB8fDB8fHww" alt="Book 3">
                     <p>Once Upon a Time</p>
                 </div>
+                <div class="book-card">
+                    <img src="https://images.unsplash.com/photo-1507738978512-35798112892c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fGJvb2tzfGVufDB8fDB8fHww" alt="Book 3">
+                    <p>Once Upon a Time</p>
+                </div>
+                <div class="book-card">
+                    <img src="https://images.unsplash.com/photo-1507738978512-35798112892c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fGJvb2tzfGVufDB8fDB8fHww" alt="Book 3">
+                    <p>Once Upon a Time</p>
+                </div>
             </div>
         </section>
     </main>
