--- a/Book-Access/public/index.html
+++ b/Book-Access/public/index.html
@@ -20,7 +20,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>BookShop App</title>
+    <title>Biblio</title>
   </head>
   <body>
     <div id="root"></div>
